--- a/apps/web-client/public/index.html
+++ b/apps/web-client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="margin: 0">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,4 +40,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <style>
+    html, body, #root, #root>div {
+      height: 100%;
+      margin: 0;
+      min-height: 100vh;
+    }
+  </style>
 </html>
